--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
     "pm2": "^5.3.0",
-    "razorpay": "^2.8.6"
+    "razorpay": "^2.8.6",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
